# ai-research-assistant

./: .env.prod  .gitignore  .pre-commit-config.yaml  Makefile  README.md  ai.docker-compose.yaml  create.py  docker-compose-ai.yaml  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml  requirements.txt  task.py  test.ipynb
ai/: embedding.py  question_answering.py  ray.yaml  summarizer.py
api/: dependencies.py  main.py  tasks.py
api/mock/: feed.json
api/routers/: article.py  arxiv.py  semantic_scholar.py  tasks.py
api/schema/: article.py  arxiv.py
api/tests/: conftest.py  test_main.py
api/utils/: semantic_scholar.py
app/: Home.py  db.py  schema.py  settings.py  vector_db.py
app/pages/: 1_Search.py  1_Search_Arxiv.py  1_Search_Semantic_Scholar.py  2_Library.py
app/utils/: api_client.py  app.py
config/: base.yaml  dev.config.yaml  prod.config.yaml  redis.conf
core/: ai.py  redis.py  settings.py
core/ai/: agent.py  base_engine.py  factory.py  ollama_engine.py  openai_engine.py
core/schema/: ai.py  article.py  arxiv.py  pagination.py  semantic_scholar.py
core/utils/: chunking.py  db.py  parser.py  text.py  validation.py  vector_db.py
docker/: ai.Dockerfile  api.Dockerfile  pocketbase.Dockerfile  python.Dockerfile
gateway/: kong.yaml  kong.yml
migrations/: 1703743084_created_articles.js  1703743147_collections_snapshot.js  1703743863_updated_articles.js  1703743891_collections_snapshot.js  1704652354_updated_articles.js  create_admin.js
notebooks/: data_gen.ipynb  experiment.ipynb  test.ipynb
workers/: app.py  tasks.py
